--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
         <label class="lab1">Password1</label>
         <input class="pwd1" type="text" placeholder="456"/>
     </div>
-
+    
+    //补充DIV
+    <div>supplement</div>
+    
 </body>
 </html>
